[metadata]
license_files =
    REDIST.txt
    ThirdPartyNotices.md
    license.md

description = "Microsoft Cognitive Services Speech SDK"
long_description = 
    Microsoft Speech SDK for Python
    ===============================

    For an introduction to this package, have a look at `the quickstart
    article <https://docs.microsoft.com/azure/cognitive-services/speech-service/quickstart-python>`_.

    For information about the Speech Service, please refer to `its
    website <https://docs.microsoft.com/azure/cognitive-services/speech-service/>`_.

    Documentation
    -------------

    API documentation for this package can be found `here <https://aka.ms/csspeech/pythonref>`_.

    License information
    -------------------

    - `Microsoft Software License Terms for the Speech SDK <https://aka.ms/csspeech/license201809/>`_
    - `Third party notices <https://aka.ms/csspeech/toctpn/>`_

author = Microsoft

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
